<?xml version="1.0"?>
<package>
  <name>me6_bringup</name>
  <version>0.0.0</version>
  <description>The me6_bringup package</description>
  <maintainer email="kaneko@todo.todo">kaneko</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
    <run_depend>dobot_description</run_depend>
</package>
